--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
 body {
-  background-color: red;
+  background-color: black;
+  color: white;
+  font-size: 2em;
+}
+
+
+#planets dd{
+	display: none; /* this hides the text and space as well */
+	font-size: 1em;
 }
